package topstack_LoadBalancer;

option java_package = "com.transcend.loadbalancer.message";
option java_outer_classname = "LoadBalancerMessage";

message Listener {
    required string protocol = 1;
    required uint32 loadBalancerPort = 2;
    optional string instanceProtocol = 3;
    required uint32 instancePort = 4;
    optional string sSLCertificateId = 5;
}

message HealthCheck {
    required string target = 1;
    required uint32 interval = 2;
    required uint32 timeout = 3;
    required uint32 healthyThreshold = 4;
    required uint32 unhealthyThreshold = 5;
}

message InstanceState {
    required string description = 1;
    required string instanceId = 2;
    required string reasonCode = 3;
    enum InstanceStateType {
        OUT_OF_SERVICE = 0;
        IN_SERVICE = 1;
    }
    required InstanceStateType state = 4;
}

message Instance {
    required string instanceId = 1;
}